<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_show_cancelled"
        android:checkable="true"
        android:checked="false"
        android:title="@string/action_show_cancelled"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_today"
        android:icon="@drawable/ic_today_white_24dp"
        android:title="@string/action_today"
        app:showAsAction="always"/>

    <item
        android:icon="@drawable/ic_date_range_white_24dp"
        android:title="@string/action_display_range"
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_show_one_day"
                    android:title="@string/action_show_one_day"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/menu_show_three_days"
                    android:checked="true"
                    android:title="@string/action_show_three_days"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/menu_show_week"
                    android:title="@string/action_show_week"
                    app:showAsAction="never"/>
            </group>
        </menu>
    </item>
</menu>