<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             tools:layout_editor_absoluteX="8dp"
                                             tools:layout_editor_absoluteY="8dp">

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/txt_booking_service"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginLeft="24dp"
              android:layout_marginStart="24dp"
              android:layout_marginTop="24dp"
              android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
              android:textColor="@color/colorAccent"
              android:textSize="20sp"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              tools:text="Mamografija"/>

    <TextView
        android:id="@+id/txt_booking_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_person_black_18dp"
        android:drawablePadding="4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_booking_service"
        tools:text="Poliklinika Sunce"/>

    <TextView
        android:id="@+id/txt_booking_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:drawableLeft="@drawable/ic_time_black_18dp"
        android:drawablePadding="4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_booking_user"
        tools:text="15:30 - 16:15"/>

    <TextView
        android:id="@+id/txt_booking_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:drawableLeft="@drawable/ic_info_outline_black_18dp"
        android:drawablePadding="4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_booking_time"
        tools:text="Waiting..."/>

    <TextView
        android:id="@+id/txt_booking_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:drawableLeft="@drawable/ic_cash_black_18dp"
        android:drawablePadding="4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_booking_status"
        tools:text="350 kn"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_booking_price">

        <TextView
            android:id="@+id/txt_booking_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_assignment_black_18dp"
            android:drawablePadding="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="Imam puno toga za obaviti pa vas molim da me primite prvog kako bi stigao obaviti i ostale preglede.\n Hvala!"/>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="right|end"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/btn_cancel_booking"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/cancel_booking"
            android:visibility="gone"
            tools:visibility="visible"/>

        <Button
            android:id="@+id/btn_reject_booking"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/reject_booking"
            android:visibility="gone"
            tools:visibility="visible"/>

        <Button
            android:id="@+id/btn_confirm_booking"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/confirm_booking"
            android:visibility="gone"
            tools:visibility="visible"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>